kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: senevent
  namespace: senevent

spec:
  replicas: 1

  selector:
    matchLabels:
      app: senevent

  template:
    metadata:
      labels:
        app: senevent

    spec:
      containers:
      - name: senevent

        image: dijaka126/senevent:v1

        imagePullPolicy: Always

        ports:
        - containerPort: 80
