kubernetes/blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: senevent-blue
  namespace: senevent

spec:
  replicas: 1

  selector:
    matchLabels:
      app: senevent
      version: blue

  template:
    metadata:
      labels:
        app: senevent
        version: blue

    spec:
      containers:
        - name: senevent
          image: khadidiatou1105/seneventdevops:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 80
