kubernetes/green-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: senevent-green
  namespace: senevent

spec:
  replicas: 1

  selector:
    matchLabels:
      app: senevent
      version: green

  template:
    metadata:
      labels:
        app: senevent
        version: green

    spec:
      containers:
      - name: senevent

        image: khadidiatou1105/seneventdevops:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 80
