kubernetes/app-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: senevent-service
  namespace: senevent

spec:
  selector:
    app: senevent
    version:  blue

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
