kubernetes/blue-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: senevent-blue-service
  namespace: senevent

spec:
  selector:
    app: senevent
    version: blue

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
