kubernetes/canary-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: senevent-canary-service
  namespace: senevent

spec:

  selector:
    app: senevent
    version: canary

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
