kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: senevent-ingress
  namespace: senevent

spec:
  ingressClassName: nginx

  rules:
    - host: senevent.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: senevent-blue-service
                port:
                  number: 80
